# trv

./: .gitignore  Cargo.toml  DATAFLOW.md  LICENSE  README.md  USAGE.md  install.sh  uninstall.sh
.opencode/skills/trv-theme-creation/: SKILL.md
presets/: all_metrics.toml  clock_metrics.toml  cpu_gpu.toml  dashboard.toml  full_system.toml  minimal.toml  video.toml
src/: config.rs  lib.rs  main.rs
src/daemon/: config.rs  mod.rs  runner.rs
src/device/: adb.rs  connection.rs  mod.rs
src/metrics/: collector.rs  cpu.rs  disk.rs  fan.rs  gpu.rs  memory.rs  mod.rs  network.rs
src/protocol/: cmd.rs  constants.rs  frame.rs  mod.rs  widget.rs
src/theme/: hex.rs  mod.rs  model.rs  presets.rs  toml.rs
src/theme/model/: tests.rs
src/tui/: app.rs  canvas.rs  event.rs  fields.rs  input.rs  mod.rs  palette.rs  ui.rs
src/tui/app/: canvas_keys.rs  core.rs  device.rs  dialogs.rs  helpers.rs  mod.rs  properties.rs  routing.rs  sidebar.rs  widget_overlays.rs
src/tui/app/tests/: common.rs  interaction.rs  mod.rs  paths.rs  worker.rs
src/tui/canvas/: tests.rs
src/tui/fields/: tests.rs
src/tui/ui/: common.rs  dialog_overlays.rs  overlays.rs  panels.rs
tests/: protocol_reference.rs
themes/: matrix_terminal_ni7seg.toml  scifi_hud_metrics_clock.toml
